[package]
authors       = ["museun <museun@outlook.com>"]
description   = "turns sample json into rust structs"
documentation = "https://docs.rs/json_to_rust/latest/json_to_rust/"
edition       = "2018"
license       = "0BSD"
name          = "json_to_rust"
readme        = "README.md"
repository    = "https://github.com/museun/json_to_rust"
version       = "0.2.0"

[dependencies]
anyhow      = "1.0.33"
indexmap    = "1.6.0"
inflections = "1.1.1"
json        = "0.12.4"
pico-args   = "0.3.4"
